--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 VITE_APP_TITLE = GUI.for.SingBox
 VITE_APP_VERSION = v1.0.0
-VITE_APP_PROJECT_URL = https://github.com/onejibang/GUI.for.Clash
-VITE_APP_VERSION_API = https://api.github.com/repos/onejibang/GUI.for.Clash/releases/latest
+VITE_APP_PROJECT_URL = https://github.com/GUI-for-Cores/GUI.for.SingBox
+VITE_APP_VERSION_API = https://api.github.com/repos/GUI-for-Cores/GUI.for.SingBox/releases/latest
 VITE_APP_TG_GROUP = https://t.me/GUI_for_Clash
 VITE_APP_TG_CHANNEL = https://t.me/GUI_for_Clash_Channel
