--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -22,6 +22,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set Channel
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: "Dev"
+          replace: "Artifact"
+          include: "frontend/.env"
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
