chore: restore back typecheck method

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
 		"build": "run-p type-check \"build-only {@}\" --",
 		"preview": "vite preview",
 		"build-only": "vite build",
-		"type-check": "vue-tsc --noEmit",
+		"type-check": "vue-tsc --build",
 		"lint": "eslint . --fix",
 		"format": "prettier --write src/"
 	},
