--- a/frontend/.env
+++ b/frontend/.env
@@ -2,5 +2,6 @@ VITE_APP_TITLE = GUI.for.SingBox
 VITE_APP_VERSION = v1.9.9
 VITE_APP_PROJECT_URL = https://github.com/GUI-for-Cores/GUI.for.SingBox
 VITE_APP_VERSION_API = https://api.github.com/repos/GUI-for-Cores/GUI.for.SingBox/releases/latest
+VITE_APP_LOCALES_URL = https://github.com/GUI-for-Cores/GUI-for-Cores.github.io/tree/main/app-resources/locales/gfs
 VITE_APP_TG_GROUP = https://t.me/GUI_for_Cores
 VITE_APP_TG_CHANNEL = https://t.me/GUI_for_Cores_Channel
