--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -1,13 +1,6 @@
 {
-  "extends": "@tsconfig/node22/tsconfig.json",
-  "include": [
-    "vite.config.*",
-    "vitest.config.*",
-    "cypress.config.*",
-    "nightwatch.conf.*",
-    "playwright.config.*",
-    "eslint.config.*"
-  ],
+  "extends": "@tsconfig/node24/tsconfig.json",
+  "include": ["vite.config.*", "eslint.config.*"],
   "compilerOptions": {
     "composite": true,
     "noEmit": true,
