--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,38 +19,38 @@
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-json": "^6.0.2",
     "@codemirror/lang-yaml": "^6.1.2",
-    "@codemirror/lint": "^6.9.2",
+    "@codemirror/lint": "^6.9.3",
     "@codemirror/merge": "^6.11.2",
     "@codemirror/state": "^6.5.4",
     "@codemirror/theme-one-dark": "^6.1.3",
-    "@codemirror/view": "^6.39.11",
+    "@codemirror/view": "^6.39.12",
     "codemirror": "^6.0.2",
-    "croner": "10.0.0-dev.8",
+    "croner": "10.0.1",
     "marked": "^17.0.1",
     "pinia": "^3.0.4",
     "prettier": "^3.8.1",
     "vue": "^3.5.27",
     "vue-draggable-plus": "^0.6.1",
     "vue-i18n": "^11.2.8",
-    "vue-router": "^4.6.4",
+    "vue-router": "^5.0.2",
     "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.4",
-    "@types/node": "^25.0.10",
-    "@vitejs/plugin-vue": "^6.0.3",
+    "@types/node": "^25.2.0",
+    "@vitejs/plugin-vue": "^6.0.4",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.2",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-oxlint": "^1.41.0",
+    "eslint-plugin-oxlint": "^1.43.0",
     "eslint-plugin-vue": "^10.7.0",
     "less": "^4.5.1",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "^1.41.0",
+    "oxlint": "^1.43.0",
     "typescript": "~5.9.3",
-    "vite": "8.0.0-beta.10",
-    "vue-tsc": "^3.2.3"
+    "vite": "8.0.0-beta.11",
+    "vue-tsc": "^3.2.4"
   }
 }
